# naive_opt

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  memo.txt
benches/: bench-ss-algo-indices.rs  bench-ss-algo.rs  create_data.rs
docs/: review.1.md  review.2.md
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: fallback.rs  lib.rs  mc_1st.rs  mc_generic.rs  mc_last.rs
tests/: func.rs  more_test01.rs  more_test02.rs  more_test03.rs  more_test04.rs  more_test05.rs  std.rs  test.rs  trait.rs
xbench/: Cargo.toml
xbench/benches/: bench-ss-algo-indices.rs  bench-ss-algo.rs  create_data.rs
xtask/: Cargo.toml
xtask/src/: main.rs  shape_benchmark_results.rs
