[package]
name = "naive_opt"
version = "0.1.9"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "The optimized naive string-search algorithm."
keywords = ["search"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/naive_opt"

[features]
default = []

[dependencies]

[target.'cfg(any(target_arch = "x86_64",target_arch = "x86"))'.dependencies]
memchr = "=2.4"     # sse2

[target.'cfg(not(any(target_arch = "x86_64",target_arch = "x86")))'.dependencies]
libc = "=0.2"       # memchr() for aarch64, ppc64le

[dev-dependencies]
criterion = "0.3"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-ss-algo"
path = "benches/bench-ss-algo.rs"
harness = false

[[bench]]
name = "bench-ss-algo-indices"
path = "benches/bench-ss-algo-indices.rs"
harness = false
