[package]
name = "naive_opt"
version = "0.1.12"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "The optimized naive string-search algorithm."
keywords = ["search"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/naive_opt"

[features]
default = ["std"]
std = ["memx/std"]
#no_std = ["memx/no_std"]

# for tests
only_mc_1st = []
only_mc_last = []

[dependencies]
memx = { version="0.1", default-features=false }

[dev-dependencies]
criterion = "0.3"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-ss-algo"
path = "benches/bench-ss-algo.rs"
harness = false

[[bench]]
name = "bench-ss-algo-indices"
path = "benches/bench-ss-algo-indices.rs"
harness = false
