[package]
name = "naive_opt"
version = "0.1.25"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "The optimized naive string-search algorithm."
keywords = ["search"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/naive_opt"

[features]
default = []

# for tests
only_mc_1st = []
only_mc_last = []

[dependencies]
memx = { version="0.2", default-features=false }
#memx = { git="https://github.com/aki-akaguma/memx.git", default-features=false }

[workspace]
members = [
    "xbench",
    "xtask",
]

[profile.release]
lto = true
